[package]
name = "slpagora"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
rand = "0.6.5"
hex = "0.3.2"
secp256k1 = { version = "0.28.1", features = ["recovery"] }
bip32 = "0.5.1"
bip39 = "2.0.0"
k256 = { version = "0.13.3", features = ["ecdsa"] }
async-trait = "0.1.77"
num = "0.2.0"
num-derive = "0.2.4"
num-traits = "0.2.6"
text_io = "0.1.7"
sqlite = "0.32.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0" # Added for JSON handling
futures = "0.3"
tokio = { version = "1.35.1", features = ["full"] } # Added for async runtime
dirs = "1.0.5"
qrcode = "0.10.0"
colored = "1.7.0"
prost = "0.10"
prost-types = "0.10"
bitcoinsuite_core = { git = "https://github.com/givelotus/bitcoinsuite.git", package = "bitcoinsuite-core" }
bitcoinsuite_error = { git = "https://github.com/givelotus/bitcoinsuite.git", package = "bitcoinsuite-error" }
bitcoinsuite_chronik_client = { git = "https://github.com/givelotus/bitcoinsuite.git", package = "bitcoinsuite-chronik-client" }
thiserror = "1.0" # Use the correct version

[build-dependencies]
prost-build = "0.10"

